# Triple-SOS

./: .gitignore  README.md  basis_generator.py  example.py  gradio.app.py  graphics_main.py  main.gradio.py  peeling.py  pqrsos.py  pyproject.toml  readme.txt  requirements.txt  root_guess.py  sdpsos.py  sos_GUI.py  sos_manager.py  sum_of_square.py  text_process.py  triples.html  web_main.py
notebooks/: README.md  README_pypi.md  Triple Test5 Parametric.ipynb  Triple Test6 Sextic Septic.ipynb  examples.ipynb
src/core/: __init__.py  shared.py  solver.py  sos_manager.py  sum_of_square.py
src/core/linsos/: __init__.py  basis.py  basis2.py  correction.py  linsos.py  solution.py  tangents.py  updegree.py
src/core/pqrsos/: __init__.py  pqr_utils.py  pqrsos.py
src/core/sdpsos/: __init__.py  arithmetic.py  correction.py  eigen_roots.py  eigen_sos.py  findroot.py  ipm.py  manifold.py  manifold2.py  rationalize.py  sdpsos.py  sdpsos2.py  solution.py  solver.py  utils.py
src/core/structsos/: __init__.py  acyclic.py  cubic.py  nonic.py  nvars.py  octic.py  peeling.py  quadratic.py  quartic.py  quintic.py  quintic_symmetric.py  septic.py  septic_symmetric.py  sextic.py  sextic_symmetric.py  solution.py  sparse.py  structsos.py  univariate.py  utils.py
src/core/symsos/: __init__.py  proof.py  representation.py  solution.py  symsos.py  univariate.py
src/gui/: __init__.py  sos_GUI.py  sos_manager.py  visualize.py
src/sdp/: __init__.py  abstract.py  arithmetic.py  dual.py  primal.py  rationalize.py  solver.py  transform.py  utils.py
src/sdp/backend/: __init__.py  backend.py  caller.py  clarabel_sdp.py  cvxopt_sdp.py  cvxpy_sdp.py  mosek_sdp.py  picos_sdp.py  sdpap_sdp.py
src/utils/: __init__.py  basis_generator.py  polytools.py  root_guess.py  root_tangents.py  test.py  text_process.py
src/utils/expression/: __init__.py  coeff.py  cyclic.py  form.py  solution.py
src/utils/roots/: __init__.py  findroot.py  grid.py  monotonic_opt.py  rationalize.py  roots.py  rootsinfo.py  tangents.py
static/js/: history.js  html2canvas.min.js  linebreak.js  on_change.js  settings.js  socket.js  visualization.js
triples/: __init__.py
triples/benchmarks/: run_benchmark.py
triples/benchmarks/problems/: __init__.py  problem_set.py
triples/core/: __init__.py  complexity.py  dispatch.py  node.py  problem.py  shared.py  solution.py  sum_of_square.py  sum_of_squares.py
triples/core/linsos/: __init__.py  _tangents.py  basis.py  correction.py  lift.py  linsos.py  solution.py  tangents.py  updegree.py
triples/core/pivoting/: __init__.py  pivoting.py  quadratic.py
triples/core/pqrsos/: __init__.py  pqr_utils.py
triples/core/preprocess/: __init__.py  algebraic.py  assembler.py  elimination.py  features.py  modeling.py  pivoting.py  polynomial.py  reparam.py  signs.py
triples/core/sdpsos/: __init__.py  abstract.py  manifold.py  sdpsos.py  sohs.py  solution.py  sos.py  sos_moment.py
triples/core/structsos/: __init__.py  nvars.py  solution.py  sparse.py  structsos.py  univariate.py  utils.py
triples/core/symsos/: __init__.py  basic.py  representation.py  solution.py  symmetric.py  symsos.py
triples/core/tests/: test_dispatch.py  test_problem.py
triples/gui/: __init__.py  grid.py  linebreak.py  sos_manager.py  visualize.py
triples/sdp/: __init__.py  abstract.py  arithmetic.py  dual.py  ipm.py  primal.py  rationalize.py  transform.py  utils.py
triples/sdp/arithmetic/: __init__.py  eigens.py  linsolve.py  lll.py  matmul.py  matop.py
triples/sdp/backend/: backend.py  caller.py  clarabel_sdp.py  cvxopt_sdp.py  picos_sdp.py
triples/sdp/backends/: __init__.py  backend.py  caller.py  clarabel_sdp.py  cvxopt_sdp.py  cvxpy_sdp.py  mosek_sdp.py  picos_sdp.py  qics_sdp.py  sdpap_sdp.py  settings.py  status.py
triples/sdp/tests/: test_dual.py  test_primal.py
triples/sdp/tranforms/: linear.py  transform.py  transformable.py
triples/sdp/transforms/: __init__.py  diagonalize.py  linear.py  parametric.py  polytope.py  transform.py  transformable.py
triples/sdp/wedderburn/: __init__.py  character_table.py  decomposition.py  dixon.py  symmetric.py
triples/testing/: doctest_parser.py  fix_code_quality.py
triples/testing/tests/: test_dependency.py
triples/utils/: __init__.py  basis_generator.py  expression.py  monomials.py  normalforms.py  polytools.py  pqr.py  solution.py  text_process.py  tree_predictor.py
triples/utils/expression/: __init__.py  coeff.py  cyclic.py  form.py  pqr.py  psatz.py  solution.py
triples/utils/expressions/: __init__.py  coeff.py  (+4 more)
(+133 files in other folders)
