[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triples"
version = "0.1.0"
description = "Automatic sum-of-squares proofs for algebraic inequalities"
readme = "notebooks/README_pypi.md"
license = {file = "LICENSE"}
authors = [
    {name = "ForeverHaibara", email = "1378855363@qq.com" },
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
    "sympy>=1.9",
    "clarabel; python_version >= '3.7'",
    "cvxopt; python_version < '3.7'",
]
keywords = ["sum-of-squares", "SOS", "inequality", "solver", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Homepage" = "https://github.com/ForeverHaibara/Triple-SOS"

[tool.setuptools.packages.find]
where = ["."]
include = ["triples*"]

[tool.setuptools.package-data]
triples = ["**/*.npz"]

[tool.ruff]
# from SymPy
lint.select = [
    "B015",  # Useless comparison: a == b rather than a = b.
    "I002",  # `import` statement not at top of file
    "C4",
    "E",
    "F",
    "FURB",
    "LOG",
    "PIE810",
    "PLE",
    "PLR1736",
    "PLW0602", # Global statement used but no assignment
    "SIM101",
    "SLOT",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "TRY002",
    "BLE001", # except Exception or except BaseException
    # "UP006", # pyupgrade - non-pep585-annotation
    # "UP007", # pyupgrade - non-pep604-annotation-union
    # "UP045", # pyupgrade - non-pep604-annotation-optional
]

# Ignore rules that currently fail on the SymPy codebase
lint.ignore = [
    "E401",  # Multiple imports on one line
    "E402",  # Module level import not at top of file
    "E501",  # Line too long (<LENGTH> > 88 characters)
    "E701",  # Multiple statements on one line (colon)
    "E702",  # Multiple statements on one line (semicolon)
    "E712",  # Comparison to `<BOOL>` should be `cond is <BOOL>`
    "E713",  # Test for membership should be `not in`
    "E714",  # Test for object identity should be `is not`
    "E721",  # Do not compare types, use `isinstance()`
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "E741",  # Ambiguous variable name: `<VARIABLE>`
    "E743",  # Ambiguous function name: `<FUNCTION>`
    "F811",
    "FURB110",  # Replace ternary `if` expression with `or` operator
    "FURB187",  # Use of assignment of `reversed` on list `{name}`
]
